# ku

./: .rustfmt.toml  .travis.yml  CNAME  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  index.html  ku-web.js  ku-web.wasm
src/: dimensions.rs  gen.rs  lib.rs  main.rs  puzzle.rs  sol.rs  sudoku.rs
src/ui/: color.rs  mod.rs  model.rs
tests/: sol.rs
tests/sudokus/invalid/: 2D-O3.txt  2D-O4.txt
tests/sudokus/solvable/: 2D-O3.txt  2D-O4.txt
web/: Cargo.toml
web/src/: main.rs  view.rs
web/static/: style.css
