[package]
name = "ku"
version = "0.1.1"
authors = ["Alex Hamilton <alex.hamilton@ou.edu>"]
description = "A sudoku crate."
repository = "https://github.com/Aehmlo/ku"
readme = "README.md"
keywords = ["sudoku"]
license = "Apache-2.0"

[badges]
travis-ci = { repository = "Aehmlo/ku", branch = "master" }
maintenance = { status = "actively-developed" }

[[bin]]
name = "ku"
path = "src/main.rs"

[lib]
name = "sudoku"
path = "src/lib.rs"

[dependencies]
rand = "0.4.2"
clap = "2.31.2"
stdweb = "0.4.6"

[features]
default = ["2D", "use_rand"]
"2D" = []
"3D" = []
"4D" = []
"5D" = []
"6D" = []
"7D" = []
"8D" = []
"9D" = []
"10D" = []
"11D" = []
"12D" = []
"ui" = []
"use_rand" = []
"use_stdweb" = []
